# equalizador-promax

./: .gitignore  EqualizadorProMax.spec  README.md  pyproject.toml
Docs/: architecture-brief-equalizador-promax-v2.md  product-brief-equalizador-promax-v2.md
installer/: EqualizadorProMax.iss  version-info.txt
processo_antigo/: burrinha.txt  historias.txt  script.py  script_jira.txt
scripts/: build-installer.ps1  build-windows.ps1  rollback-version.ps1  version-tool.py
src/equalizador_promax/: __init__.py  __main__.py  cli.py  config.py  correlation.py  errors.py  git_adapter.py  gui.py  gui_main.py  jira_client.py  models.py  orchestrator.py  run_store.py  utils.py  versioning.py
tests/: test_config.py  test_correlation.py  test_gui_paths.py  test_jira_client.py  test_orchestrator.py  test_run_store.py  test_utils.py  test_versioning.py
