[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "equalizador-promax"
version = "0.1.9"
description = "CLI local para equalizacao assistida entre develop e quality."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jira>=3.8.0",
  "keyring>=25.0.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
equalizador-promax = "equalizador_promax.cli:main"
equalizador-promax-gui = "equalizador_promax.gui:launch_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/equalizador_promax"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
